--- a/Gobot/Gobot/Content/Home.scss
+++ b/Gobot/Gobot/Content/Home.scss
@@ -280,6 +280,89 @@ body { overflow: hidden; }
     }
 }
 
+#popOut_login {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: $darkerGrey;
+    z-index: 9999;
+
+    > form {
+        > label, > input {
+            display: block;
+            position: relative;
+            font: italic 900 34px $font;
+            text-align: center;
+        }
+
+        > label:not(:first-of-type) { margin-top: 40px !important; }
+        > label {
+            text-transform: uppercase;
+            margin-bottom: 10px;
+            color: $grey;
+            text-transform: uppercase;
+        }
+        > input:not([type=submit]) {
+            background-color: transparent;
+            border-bottom: 1px solid $darkGrey;
+            font-weight: 400 !important;
+            font-size: 26px !important;
+            width: 60%;
+            margin-left: 20%;
+            color: $off-white;
+        }
+            > input:not([type=submit]):focus { border-bottom-color: $menuColor !important; }
+
+        > input[type=submit] {
+            position: relative;
+            display: block;
+            width: 50%;
+            height: auto;
+            margin-left: calc(25% - 10px);
+            padding: 15px 10px;
+            background-color: transparent;
+            border: 1px solid $grey;
+            margin-top: 50px;
+            color: $off-white;
+            cursor: pointer;
+            text-transform: uppercase;
+        }
+            > input[type=submit]:hover {
+                border-color: $menuColor;
+                color: $menuColor;
+            }
+
+        > img {
+            display: block;
+            position: relative;
+            width: 30px;
+            margin-left: calc(50% - 45px);
+            margin-top: 30px;
+            display: block;
+            color: $grey;
+            cursor: pointer;
+            padding: 15px;
+            border: 1px solid $grey;
+            color: $grey;
+        }
+            > img:hover { color: $red; border-color: $red; background-color: $red; }
+
+        > span { 
+            width: 100%;
+            text-align: center;
+            color: $red;
+            font: 400 14px $font;
+            margin-top: 5px;
+        }
+    }
+}
+
+@media screen and (max-width: 555px) {
+    #popOut_login > form > label, #popOut_login > form > input { font-size: 28px; width: 90% !important; margin-left: 5% !important; }
+}
+
 @media screen and (max-width: 1600px) {
     #header { height: 210px; }
     #signIn_circle { display: none; }
