--- a/Gobot/Gobot/Views/Account/Index.cshtml
+++ b/Gobot/Gobot/Views/Account/Index.cshtml
@@ -12,6 +12,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title - Gobotter</title>
     <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700,900,900italic,300italic,400italic,700italic' rel='stylesheet' type='text/css'>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     @Styles.Render("~/Content/Account.css")
 </head>
 <body>
@@ -44,7 +45,7 @@
         </h1>
         <h4>1 Gobot credit = 0.01$</h4>
         <button id="buy"><h6>BUY</h6></button>
-        <button id="trade"> 
+        <button id="trade">
             <h5>TRADE</h5>
             <h2><grey>SKINS</grey></h2>
         </button>
