--- a/Gobot/Gobot/Views/Shared/_Layout.cshtml
+++ b/Gobot/Gobot/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
             <div style="background-image: url(@Url.Content("~/Images/bet.png"))"></div>
         </a>
         <a id="teams" href="@Url.Action("Index", "Teams")">
-            <div style="background-image: url(@Url.Content("~/Images/team.png"))"></div>
+            <div style="background-image: url(@Url.Content("~/Images/teams.png"))"></div>
         </a>
         <a id="inventory" href="@Url.Action("Index", "Inventory")">
             <div style="background-image: url(@Url.Content("~/Images/inventory.png"))"></div>
