--- a/Gobot/Gobot/Views/Shared/_Layout.cshtml
+++ b/Gobot/Gobot/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Gobotter</title>
     <link href='https://fonts.googleapis.com/css?family=Lato:400,100,300,700,900,900italic,300italic,400italic,700italic' rel='stylesheet' type='text/css'>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
     @Styles.Render("~/Content/Menu.css")
     @Styles.Render("~/Content/Style.css")
@@ -56,12 +57,8 @@
             <div class="box" id="contact"><img src="~/Images/contact.png" /><span>Contact</span></div>
         </div>
     </div>*@
-    <div class="container body-content">
-        @RenderBody()
-    </div>
+    @RenderBody()
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
 </html>
