--- a/Gobot/Gobot/Content/Menu.scss
+++ b/Gobot/Gobot/Content/Menu.scss
@@ -90,6 +90,7 @@
         z-index: 901;
         overflow: visible;
         padding: 0 10px;
+        border: 1px solid $darkGrey;
 
         > span {
             display: block;
