--- a/Gobot/Gobot/Content/_global.scss
+++ b/Gobot/Gobot/Content/_global.scss
@@ -13,6 +13,7 @@ $menuColor_Ink: #a74232;
 $darkerGrey: #1f1f1f;
 $darkGrey: #323232;
 $grey: #626262;
+$lightGrey: #5f5f5f;
 $green: #51c24b;
 $red: #963434;
 $off-white: #eeeeee;
