--- a/Gobot/Gobot/Views/Account/Index.cshtml
+++ b/Gobot/Gobot/Views/Account/Index.cshtml
@@ -16,7 +16,7 @@
 </div>
 
 <div class="info">
-    <div id="rank">
+    <div class="info_logo" id="rank">
         <h2>RANK</h2>
         <img src="~/Images/rank.png" />
         <h2><grey>@Html.DisplayFor(model => model.Level)</grey></h2>
@@ -29,44 +29,60 @@
 </div>
 
 <div class="info" id="credits">
-    <img src="~/Images/gbCredit.png" />
-    <h1>
-        @Html.DisplayFor(model => model.Credits) <grey>GOBOT CREDITS</grey>
-    </h1>
+    <div class="info_logo"></div>
+    <h1>@Html.DisplayFor(model => model.Credits) <b>GOBOT CREDITS</b></h1>
     <h4>1 Gobot credit = 0.01$</h4>
-    <button id="buy"><h6>BUY</h6></button>
+    <button id="buy"><h6>ACHETER</h6></button>
     <button id="trade">
-        <h5>TRADE</h5>
-        <h2><grey>SKINS</grey></h2>
+        <h5>REGARDER UNE</h5>
+        <h2><b>ANNONCE</b></h2>
     </button>
 </div>
 
 <div class="info" id="bets">
-    <img src="~/Images/dices-big.png" />
-    <h1 id="total">300 <grey>BETS</grey></h1>
-    <h1 id="wins"><green>150</green> <grey>WINS</grey></h1>
-    <h1 id="ratio">50% <grey>WON GAMES</grey></h1>
+    <div class="info_logo"></div>
+    <h1 id="total">300 <b>VICTOIRES</b></h1>
+    <h1 id="wins">150<b>PARTIES</b></h1>
+    <h1 id="ratio">50% <b>PARTIES GAGNÉES</b></h1>
 </div>
 
-<div class="info" id="inventory">
-    <img src="~/Images/bullet-big.png" />
-    <h1 id="steam-skins">83 <grey>SKINS <h4>IN STEAM INVENTORY</h4></grey></h1>
-    <h1 id="value">94.07$ <h2><grey>ESTIMATED VALUE</grey></h2></h1>
+<div class="info" id="creditStats">
+    <div class="info_logo"></div>
+    <h1 id="wonLoss"><b>850</b>/<b>400</b>VICTOIRES/DÉFAITES</h1>
+    <h1>200<b>ACHETÉS</b></h1>
     <button id="buySkins">
-        <h5>BUY SKINS</h5>
-        <h4><grey>FROM GOBOTTER</grey></h4>
+        <h5>ACHETER DES CRÉDITS</h5>
+        <h4><grey>DE GOBOTTER</grey></h4>
     </button>
 </div>
 
 <div class="info" id="transactions">
-    <img src="~/Images/transactions-big.png" />
-    <h1 id="toGB">8 <grey>SKINS TRADED <h3>TO GOBOTTER</h3></grey></h1>
-    <h1 id="fromGB">8 <grey>SKINS BOUGHT <h3>FROM GOBOTTER</h3></grey></h1>
-    <button><h3><grey>VIEW ALL</grey></h3> <h5>TRANSACTIONS</h5></button>
+    <div class="info_logo"></div>
+    <h1 id="fromGB">8 <b>OBJETS ACHETÉS</b></h1>
+    <h2>FROM GOBOTTER</h2>
+    <h1>525 <b>CRÉDITS TOTAL</b></h1>
+    <button><h3><grey>MES</grey></h3> <h5>TRANSACTIONS</h5></button>
+</div>
+
+<div class="info" id="matches">
+    <div class="info_logo"></div>
+    <h1>250<b>PARTIES REGARDÉES</b></h1>
+    <h1>CLOUD6<b>ÉQUIPE FAVORITE</b></h1>
+    <button><h2>VOIR LES</h2><h1>ÉQUIPES</h1></button>
 </div>
 
 @section Scripts {
     <script>
+        $(function () {
+            onResize();
+        });
 
+        $(window).resize(function () {
+            onResize();
+        });
+
+        function onResize() {
+            h_align_window($(".info"));
+        }
     </script>
 }
