--- a/Gobot/Gobot/Content/Menu.css
+++ b/Gobot/Gobot/Content/Menu.css
@@ -182,7 +182,8 @@ img {
     background-color: #232323;
     z-index: 901;
     overflow: visible;
-    padding: 0 10px; }
+    padding: 0 10px;
+    border: 1px solid #323232; }
     #navBig > #text > span {
       display: block;
       position: relative;
