--- a/Gobot/Gobot/Views/Home/Index.cshtml
+++ b/Gobot/Gobot/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
     @Styles.Render("~/Content/Home.min.css")
 </head>
 <body>
-    <noscript id="error_overlay">
+    <noscript id="js_error">
         <div>
             <div id="error_overlay_image"></div>
             <h1>Gobot nécéssite Javascript pour fonctionner corretement. Veuillez l'activer pour pouvoir profiter du contenu de Gobot.com.</h1>
