--- a/Gobot/Gobot/Content/Account.css
+++ b/Gobot/Gobot/Content/Account.css
@@ -53,7 +53,7 @@ img {
 .white {
   color: white; }
 
-#error_overlay {
+#error_overlay, #js_error {
   position: fixed;
   top: 0;
   left: 0;
@@ -62,11 +62,11 @@ img {
   min-height: 100%;
   background-color: #141414;
   z-index: 9999; }
-  #error_overlay > div {
+  #error_overlay > div, #js_error > div {
     position: relative;
     width: 50%;
     margin: 40px 25%; }
-    #error_overlay > div > #error_overlay_image {
+    #error_overlay > div > #error_overlay_image, #js_error > div > #error_overlay_image {
       display: block;
       position: relative;
       width: 220px;
@@ -74,15 +74,15 @@ img {
       margin-left: calc(50% - 220px / 2);
       background: #963434 no-repeat center/55% url("/Images/close.png");
       border-radius: 50%; }
-    #error_overlay > div > h1, #error_overlay > div > a, #error_overlay > div > button {
+    #error_overlay > div > h1, #error_overlay > div > a, #error_overlay > div > button, #js_error > div > h1, #js_error > div > a, #js_error > div > button {
       display: block !important;
       text-align: center;
       font: italic 400 36px Lato, Arial, sans-serif; }
-    #error_overlay > div > h1 {
+    #error_overlay > div > h1, #js_error > div > h1 {
       color: #eeeeee;
       width: 80% !important;
       margin-left: 10%; }
-    #error_overlay > div > a, #error_overlay > div > button {
+    #error_overlay > div > a, #error_overlay > div > button, #js_error > div > a, #js_error > div > button {
       width: 60% !important;
       margin-left: 20%;
       margin-top: 50px !important;
@@ -90,7 +90,7 @@ img {
       color: #626262;
       border: 1px solid #323232;
       padding: 15px 0; }
-    #error_overlay > div > a:hover, #error_overlay > div > button:hover {
+    #error_overlay > div > a:hover, #error_overlay > div > button:hover, #js_error > div > a:hover, #js_error > div > button:hover {
       color: #eeeeee;
       border-color: #eeeeee; }
 
@@ -115,16 +115,19 @@ img {
       height: 120px !important;
       margin-left: calc(50% - 120px /2) !important; } }
 
+button, a, h1, h2, h3, h4, h5, h6 {
+  position: relative;
+  display: block; }
+
 h1, h2, h3, h4, h5, h6 {
-  font: italic 900 40px Lato, sans-serif;
-  color: white; }
+  font: italic 900 40px Lato, Arial, sans-serif;
+  color: #eeeeee;
+  padding: 0;
+  margin: 0; }
 
 h1 {
-  display: block;
-  float: left;
-  margin: 0;
-  width: 32%;
-  font-size: 40px; }
+  font-size: 40px;
+  line-height: 32px; }
 
 h2 {
   font-size: 24px; }
@@ -133,7 +136,10 @@ h3 {
   font-size: 18px; }
 
 h4 {
-  font-size: 14px; }
+  font: 400 16px Lato, Arial, sans-serif;
+  color: #5f5f5f;
+  padding: 0;
+  margin: 0; }
 
 h5 {
   font-size: 30px; }
@@ -150,16 +156,28 @@ span {
   clear: both;
   width: 85%;
   max-width: 1350px;
-  height: 130px;
+  height: auto;
   background-color: #232323;
   margin: 2px auto; }
+  .info b {
+    color: #5f5f5f !important;
+    font-weight: inherit; }
+  .info > div {
+    float: left;
+    position: relative;
+    top: 0;
+    left: 0;
+    height: 130px; }
+    .info > div > button, .info > div a {
+      height: 100%;
+      top: 0;
+      left: 0; }
   .info .info_logo {
     float: left;
     position: relative;
     top: 0;
     left: 0;
     width: 130px;
-    height: 100%;
     background-position: center;
     background-color: transparent;
     background-repeat: no-repeat;
@@ -173,30 +191,28 @@ span {
     left: 0;
     height: 100%; }
 
-#credits > div {
+#credits h4 {
+  text-align: right; }
+
+#credits > div:first-of-type {
   background-image: url("/Images/gcCredit.png"); }
 
-#bets > div {
+#bets > div:first-of-type {
   background-image: url("/Images/stat_bets.png"); }
 
-#creditStats > div {
+#creditStats > div:first-of-type {
   background-image: url("/Images/stat_winLoss.png"); }
 
-#creditStats button, #creditStats a, #transactions button, #transactions a {
-  background-color: #1f1f1f; }
-
-#transactions > div {
+/*#creditStats, #transactions {
+    button, a {
+        background-color: $darkerGrey;
+    }
+}*/
+#transactions > div:first-of-type {
   background-image: url("/Images/stat_transactions.png"); }
 
-#matches > div {
+#matches > div:first-of-type {
   background-image: url("/Images/stat_matches.png"); }
-
-#credits h4 {
-  position: absolute;
-  top: 23px;
-  left: 255px;
-  font-weight: 400 !important;
-  color: #7c7c7c; }
 
 .overlaid {
   -webkit-transform: scale(0.97);
