Modified links in /Account/Index.

--- a/Gobot/Gobot/Views/Account/Index.cshtml
+++ b/Gobot/Gobot/Views/Account/Index.cshtml
@@ -35,13 +35,13 @@
         <h4>1 Gobot credit = 0.01$</h4>
     </div>
     <div>
-        <button id="buy"><h6>ACHETER</h6></button>
+        <a href="#" id="buy"><h6>ACHETER</h6></a>
     </div>
     <div>
-        <button id="trade">
+        <a href="#" id="trade">
             <h5>REGARDER UNE</h5>
             <h2><b>ANNONCE</b></h2>
-        </button>
+        </a>
     </div>
 </div>
 
